force-app/main/default/objects/Case_Field_History__c/Case_Field_History__c.object-meta.xml
<CustomObject>
    <description>Track when case fields have been updated from the customer form</description>
    <label>Case Field History</label>
    <nameField>
        <displayFormat>CFH-{0000000}</displayFormat>
        <label>Case Field History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Field Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>