force-app/main/default/objects/Case_Field_History__c/fields/Case_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Case_Lookup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Field Histories (Case)</relationshipLabel>
    <relationshipName>Case_Field_Histories1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>