force-app/main/default/objects/Case_Field_History__c/fields/Changed_At__c.field-meta.xml
<CustomField>
    <fullName>Changed_At__c</fullName>
    <label>Changed At?</label>
    <type>DateTime</type>
</CustomField>