force-app/main/default/objects/Case_Field_History__c/fields/Field_Changed__c.field-meta.xml
<CustomField>
    <fullName>Field_Changed__c</fullName>
    <label>Field Changed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>