force-app/main/default/objects/Case_Field_History__c/fields/Originating_Org__c.field-meta.xml
<CustomField>
    <fullName>Originating_Org__c</fullName>
    <label>Originating Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
                <default>true</default>
                <label>Core</label>
            </value>
            <value>
                <fullName>Crozier</fullName>
            </value>
            <value>
                <fullName>Data Center LLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>