force-app/main/default/objects/Case_Field_History__c/fields/Previous_Value__c.field-meta.xml
<CustomField>
    <fullName>Previous_Value__c</fullName>
    <label>Previous Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>